# utile-job-analyser

./: .env.example  .gitignore  README.md  app.py  display_utils.py  pyproject.toml  run.sh
config/: config.py
models/: __init__.py  types.py
providers/: __init__.py  company_researcher.py  cv_parser.py  gap_matcher.py  job_context_extractor.py  uk_visa_sponsor_checker.py  web_search.py
scripts/: live_job_scraper_check.py
stages/: __init__.py  application_materials_generator.py  gap_analyzer.py  job_posting_scraper.py  ui_orchestrator.py
tests/: LIVE_SCRAPER_TESTING.md  test_app_display_wiring.py  test_app_flow.py  test_application_materials_generator.py  test_company_researcher.py  test_config.py  test_display_utils.py  test_gap_analyzer.py  test_job_posting_scraper.py  test_models.py  test_ui_orchestrator.py  test_uk_visa_sponsor_checker.py
