[project]
name = "utile-job-analyzer"
version = "0.1.0"
description = "AI-powered job application analyzer — fit scoring, company research, UK visa check, and tailored cover letters"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6.0",
  "streamlit>=1.30.0",
  "anthropic>=0.40.0",
  "openai>=1.40.0",
  "beautifulsoup4>=4.12.0",
  "httpx>=0.27.0",
  "PyMuPDF>=1.24.0",
  "pdfplumber>=0.11.0",
  "ddgs>=9.0.0",
  "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["models", "config", "stages", "providers"]
